Made a few changes

--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
             image-rendering: pixelated;
             width: 100%;
         }
+        #start{
+            color: green
+        }
     </style>
 </head>
 <body>
     <button id="start">Press Here to Start</button>
+    <button onclick="document.location='newpage.html'">Press Here to go to another page</button>
     <script src="index.js"></script>
 </body>
 </html>
