Added new player

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>Pong Canvas Game</title>
     <style>
     	* { padding: 0; margin: 0; }
-    	canvas { background: #eee; display: block; margin: 0 auto; }
+    	canvas { background: #000000; display: block; margin: 0 auto; }
     </style>
 </head>
 <body>
 
-<canvas id="myCanvas" width="480" height="320"></canvas>
+<canvas id="myCanvas" width="600" height="600"></canvas>
 
 <script src = "pong.js">
 	// JavaScript code goes here
