--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>Pong Canvas Game</title>
+    <meta charset="UTF-8">
+    <title>Pong Game JavaScript</title>
     <style>
-    	* { padding: 0; margin: 0; }
-    	canvas { background: #000000; display: block; margin: 0 auto; }
+        body{
+            background-color: dimgray;
+        }
+        #pong{
+            border: 2px solid #FFF;
+            position: absolute;
+            margin :auto;
+            top:0;
+            right:0;
+            left:0;
+            bottom:0;
+        }
     </style>
 </head>
 <body>
-
-<canvas id="myCanvas" width="600" height="600"></canvas>
-
-<script src = "pong.js">
-	// JavaScript code goes here
-</script>
-
+    <button onclick="enableMute()" type="button">Mute sound</button>
+   <canvas id="pong" width="600" height="400"></canvas>
+   <script src="pong.js"></script>
 </body>
-</html>>
-
-
-<!-- <button id="start">Press Here to Start</button> -->
-<!-- <button onclick="document.location='newpage.html'">Press Here to go to another page</button> -->
+</html>
